setup: release to private npm

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "release": "shipjs prepare"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -42,6 +43,7 @@
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
+    "shipjs": "^0.27.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.0.5",
