--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "8g-extension",
   "type": "module",
   "version": "1.1.0",
-  "private": true,
+  "private": false,
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": ["dist/"],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build --config vite.sdk.config.ts",
