--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "8g-extension",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -12,7 +12,9 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build --config vite.sdk.config.ts",
