feat: Type에러 수정

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build --config vite.sdk.config.ts",
+    "build": "tsc -p tsconfig.sdk.json && vite build --config vite.sdk.config.ts",
     "build:extension": "tsc -b && vite build --config vite.config.ts",
     "preview": "vite preview",
     "test": "vitest",
