fix: 타입 path 수정

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/sdk/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/sdk/index.d.ts"
     }
   },
   "files": [
