--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "8g-extension",
   "type": "module",
-  "version": "1.10.0",
+  "version": "1.11.0",
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -30,6 +30,9 @@
     "release": "shipjs prepare"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.78",
+    "@langchain/openai": "^0.6.14",
+    "langchain": "^0.3.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zod": "^4.1.9"
