--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "8g-extension",
   "type": "module",
-  "version": "1.13.4",
+  "version": "1.13.5",
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -32,6 +32,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
+    "jsonata": "^2.1.0",
     "langchain": "^0.3.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
