--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "scordi-extension",
   "type": "module",
-  "version": "1.14.5",
+  "version": "1.14.6",
   "private": false,
-  "main": "./dist/sdk/index.js",
+  "main": "./dist/sdk/index.cjs",
   "module": "./dist/sdk/index.js",
   "types": "./dist/sdk/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/sdk/index.d.ts",
       "import": "./dist/sdk/index.js",
-      "require": "./dist/sdk/index.js",
+      "require": "./dist/sdk/index.cjs",
       "default": "./dist/sdk/index.js"
     },
     "./blocks": {
       "types": "./dist/blocks/index.d.ts",
       "import": "./dist/blocks/index.js",
-      "require": "./dist/blocks/index.js",
+      "require": "./dist/blocks/index.cjs",
       "default": "./dist/blocks/index.js"
     },
     "./package.json": "./package.json"
