--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scordi-extension",
   "type": "module",
-  "version": "1.15.7",
+  "version": "1.15.8",
   "private": false,
   "main": "./dist/sdk/index.cjs",
   "module": "./dist/sdk/index.js",
@@ -39,12 +39,13 @@
     "release": "shipjs prepare"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.78",
-    "@langchain/openai": "^0.6.14",
+    "@langchain/anthropic": "^1.0.0",
+    "@langchain/core": "^1.0.1",
+    "@langchain/openai": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "jsonata": "^2.1.0",
-    "langchain": "^0.3.35",
+    "langchain": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zod": "^3.25.76"
