--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scordi-extension",
   "type": "module",
-  "version": "1.15.9",
+  "version": "1.15.10",
   "private": false,
   "main": "./dist/sdk/index.cjs",
   "module": "./dist/sdk/index.js",
@@ -44,6 +44,7 @@
     "@langchain/openai": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "jsonata": "^2.1.0",
     "langchain": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
