--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scordi-extension",
   "type": "module",
-  "version": "1.15.10",
+  "version": "1.15.12",
   "private": false,
   "main": "./dist/sdk/index.cjs",
   "module": "./dist/sdk/index.js",
@@ -48,6 +48,7 @@
     "langchain": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
