--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -67,8 +67,7 @@ jobs:
         if: success()
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-          webhook-type: webhook-trigger
+          channel-id: ${{ secrets.SLACK_CHANNEL }}
           payload: |
             {
               "text": "배포 완료! 🚀",
@@ -115,13 +114,14 @@ jobs:
                 }
               ]
             }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
       - name: Send Slack notification on failure
         if: failure()
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          webhook-type: incoming-webhook
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          channel-id: ${{ secrets.SLACK_CHANNEL }}
           payload: |
             {
               "text": "배포 실패! ❌",
@@ -168,3 +168,5 @@ jobs:
                 }
               ]
             }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
