--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -68,7 +68,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       - name: Configure Git
         run: |
