--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@codemirror/autocomplete": "^6.20.0",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/view": "^6.38.8",
     "@langchain/core": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
