--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -60,6 +60,7 @@
     "react-router": "^7.9.4",
     "reflect-metadata": "^0.2.2",
     "scordi-extension": "workspace:*",
+    "8g-shared": "workspace:*",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "typeorm": "^0.3.27",
