--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -45,6 +45,7 @@
     "@langchain/anthropic": "^1.0.0",
     "@langchain/core": "^1.0.1",
     "@langchain/openai": "^1.0.0",
+    "@sentry/browser": "^10.29.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "jsonata": "^2.1.0",
